--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,3 +1,8 @@
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,3 +11,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.kona.myapplication.MapsActivity" />
+
+<TextView android:id="@+id/text"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="Hello, I am a TextView" />
+
+    </LinearLayout>
