--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -12,9 +12,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.kona.myapplication.MapsActivity" />
 
+
 <TextView android:id="@+id/text"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
-android:text="Hello, I am a TextView" />
+android:text="Hello, I am a TextView"
+    android:screenOrientation="portrait"
+    android:orientation="vertical"/>
 
     </LinearLayout>
