--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -20,4 +20,13 @@ android:text="Hello, I am a TextView"
     android:screenOrientation="portrait"
     android:orientation="vertical"/>
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="29dp"
+        android:text="O"
+        android:textSize="20sp" />
+
     </LinearLayout>
