--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,32 +1,24 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.kona.myapplication.MapsActivity" />
+    android:layout_height="match_parent">
 
 
-<TextView android:id="@+id/text"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:text="Hello, I am a TextView"
-    android:screenOrientation="portrait"
-    android:orientation="vertical"/>
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.kona.myapplication.MapsActivity" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
+    <TextView android:id="@+id/text"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp"
-        android:text="O"
-        android:textSize="20sp" />
+        android:text="Hello, I am a TextView"
+        android:screenOrientation="portrait"
+        android:orientation="vertical"/>
 
-    </LinearLayout>
+
+
+</LinearLayout>
