--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -22,10 +22,10 @@
         android:onClick="TologOut"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
-        map:layout_constraintHorizontal_bias="0.926"
+        map:layout_constraintHorizontal_bias="0.921"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintTop_toTopOf="parent"
-        map:layout_constraintVertical_bias="0.96"
+        map:layout_constraintVertical_bias="0.94"
         map:srcCompat="@android:drawable/ic_input_add" />
 
     <fragment
@@ -34,8 +34,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.kona.myapplication.MapsActivity"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp" />
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:screenOrientation="portrait" />
 
 
 </android.support.constraint.ConstraintLayout>
