--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -118,9 +118,13 @@
         map:layout_constraintTop_toTopOf="parent"
         map:layout_constraintVertical_bias="0.957" />
 
-    <RelativeLayout android:id="@+id/menuOverlay" android:background="#77000000"
+    <RelativeLayout
+        android:id="@+id/menuOverlay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#77000000"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <ProgressBar
             android:id="@+id/healthbar"
@@ -128,7 +132,6 @@
             android:layout_width="200dp"
             android:layout_height="43dp"
             android:layout_alignBottom="@+id/avatar"
-            android:layout_marginStart="16dp"
             android:layout_toEndOf="@+id/avatar"
             android:max="100"
             android:progress="50"
@@ -145,9 +148,8 @@
             android:id="@+id/username"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:layout_alignBottom="@+id/healthbar"
-            android:layout_alignStart="@+id/healthbar"
-            android:layout_marginBottom="20dp"
+            android:layout_above="@+id/healthbar"
+            android:layout_toEndOf="@+id/avatar"
             android:text="SWAGKILLA"
             android:textColor="#0ddfd8"
             android:textSize="30sp"
@@ -164,8 +166,8 @@
             android:layout_height="131dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="33dp"
+            android:layout_marginStart="31dp"
+            android:layout_marginTop="37dp"
             android:background="@drawable/avatar_s2"
             android:onClick="profileView"
             app:layout_constraintLeft_toLeftOf="parent"
